Added currency selection title string resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
+    <!-- region General -->
+
     <string name="app_name">SwapX</string>
+
+    <!-- endregion -->
+
+    <!-- region Currency selection -->
+
+    <string name="currency_selection_title">Currency</string>
+
+    <!-- endregion -->
 </resources>
