--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
 
     <!-- endregion -->
 
+    <!-- region Exchange -->
+
+    <string name="exchange_button_swap">Swap</string>
+
+    <!-- endregion -->
+
     <!-- region Currency selection -->
 
     <string name="currency_selection_title">Currency</string>
